Full fix to find items
Now finds the cheapest store - code fixed full patch to make sure everything runs correctly

--- a/testindex.html
+++ b/testindex.html
@@ -144,7 +144,7 @@
             <table class="input-table">
                 <thead>
                     <tr>
-                        <th>Store</th>
+                        <th>Store (Optional)</th>
                         <th>Ingredient</th>
                         <th>Quantity</th>
                     </tr>
