--- a/Testing/ajax2.html
+++ b/Testing/ajax2.html
@@ -61,7 +61,7 @@
 
             // Send data to the server
             try {
-                const response = await fetch('http://127.0.0.1:5000/get-item', {
+                const response = await fetch('http://127.0.0.1:5000/retrieve-recipe', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
