Random shit to pull

--- a/testindex.html
+++ b/testindex.html
@@ -82,11 +82,22 @@
             <ul class="nav-links" id="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#targetCheapest">Find ingredients</a></li>
-                <li><a href="#recipe">Recipes</a></li>
+                <li><a href="#recipes">Recipes</a></li>
             </ul>
         </nav>
     </div>
 </header>
+
+
+
+
+<!-- CAS' PLAYGROUND -->
+
+
+<!-- END OF CAS' PLAYGROUND -->
+
+
+
 
 <!-- MAIN SCREEN -->
 <main class="homepage">
@@ -127,61 +138,6 @@
             <select id="recipes" class="dropdownRecipe">
                 <option> -- Select a recipe -- </option>
             </select>
-        </div>
-        <p style="color: var(--clr-text-dark); text-align: center; font-size: 2em; padding: 10px 0;">OR</p>
-        <div class="recipe-cards">
-            <div class="recipe-card">
-                <img src="images/sample_image.png" alt="TBD">
-                <div class="recipe-details">
-                    <h3>TODAY'S SPECIAL</h3>
-                    <h4>PIEROGI</h4>
-                    <ul>
-                        <li>Cheap</li>
-                        <li>Quick (3 minutes)</li>
-                        <li>Cheap (5PLN/PP)</li>
-                    </ul>
-                    <a href="#" class="recipe-link recipe2" data-recipe="foobar">SEE INGREDIENTS</a>
-                </div>
-            </div>
-            <div class="recipe-card">
-                <img src="images/sample_image.png" alt="TBD">
-                <div class="recipe-details">
-                    <h3>VEGETARIAN OPTION</h3>
-                    <h4>PIEROGI</h4>
-                    <ul>
-                        <li>Cheap</li>
-                        <li>Quick (3 minutes)</li>
-                        <li>Cheap (5PLN/PP)</li>
-                    </ul>
-                    <a href="#" class="recipe-link recipe3" data-recipe="pierogi">SEE INGREDIENTS</a>
-                </div>
-            </div>
-            <div class="recipe-card">
-                <img src="images/sample_image.png" alt="TBD">
-                <div class="recipe-details">
-                    <h3>DATE NIGHT OPTION</h3>
-                    <h4>PIEROGI</h4>
-                    <ul>
-                        <li>Cheap</li>
-                        <li>Quick (3 minutes)</li>
-                        <li>Cheap (5PLN/PP)</li>
-                    </ul>
-                    <a href="#" class="recipe-link recipe4" data-recipe="pierogi">SEE INGREDIENTS</a>
-                </div>
-            </div>
-            <div class="recipe-card">
-                <img src="images/sample_image.png" alt="TBD">
-                <div class="recipe-details">
-                    <h3>Polish Option</h3>
-                    <h4>PIEROGI</h4>
-                    <ul>
-                        <li>Cheap</li>
-                        <li>Quick (3 minutes)</li>
-                        <li>Cheap (5PLN/PP)</li>
-                    </ul>
-                    <a href="#" class="recipe-link recipe5" data-recipe="pierogi">SEE INGREDIENTS</a>
-                </div>
-            </div>
         </div>
     </section>
     <!-- #endregion -->
